2001-05-10  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/gtkutils.c: treat all widgets as GtkWidget and not as their
	real type (GtkButton, ...).

	* src/ps_print.c (print_cb): when the printing system is
	unavailable, display an error dialog only once and still permit
	export to a ps file.

2001-05-08  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/ps_print.c (get_printers): lpc and lpstat are not hard-coded
	anymore. We use "ensure_commands" to test for and check the
	printing system sanity. This is a bit cleaner that before.

	* src/zoom.c (ti_zoomed_fax_page): unzooming requires y_pix_size
	too, if ever the fax resolution is low. The fact that we "zoom" is
	because new_width > width, but height was not taken into account,
	hence our problem displaying low-res images correctly.
	(put_pixel_rot_none_unzoom): in the same case as above, we may
	need to draw two pixels instead of one.

2001-05-06  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/callbcks.c (nextpage_cb): the actions callbacks don't check
	if a file is opened anymore since their widget are enabled or
	disabled as needed.

	* src/viewer.h (enum): ActionIndex is an enum to reference the
	"command widgets" (print, rotate, go to next, ...).
	
	* src/viewer.c (viewer_set_cmd_widgets_sensitive): this functions
	disables or enables the command widgets, when a file is opened or
	closed

2001-05-01  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/viewer.c (viewer_window_cfg_event_cb): flush the event queue
	before resizing the window, so that we are sure no other event
	will resize it afterwards. Of course, we discard the callback from
	the signal handler queue beforehand...

2001-04-30  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/gtkutils.c (dialog_window_get_gtkwin): new function to
	return the GtkWindow of a DialogWindow;
	(dialog_window_set_content): this function doesn't add a frame
	around the dialog content anymore.
	dialog_window_set_content_with_frame does this instead.
